<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WindPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_file">Local Video</string>
    <string name="title_online">Online Video</string>
	<string name="loadinfo">Loading, please wait...</string>
	<string name="scaninfo">Scanning video files...</string>
	<string name="file_oper">File operation</string>
	<string name="file_rename">Rename</string>
	<string name="file_delete">Delete</string>
	<string name="file_info">Info</string>
	<string name="file_rename_exists">File is exists</string>
	<string name="file_rename_failed">Rename failed</string>
	<string name="file_delete_confirm">Sure to delete (%s) ？</string>
	<string name="file_title">Title: </string>
	<string name="file_create_time">Created time: </string>
	<string name="file_modify_time">Modified time: </string>
	<string name="file_type">Type: </string>
	<string name="file_duration">Duration: </string>
	<string name="file_size">Size: </string>
	<string name="file_path">Path: </string>
	<string name="file_resolution">Resolution: </string>
	<string name="file_info_close">Close</string>
	<string name="video_layout_loading">Loading...</string>
	<string name="video_layout_buffering_progress">Buffering: %.2f%%</string>
	<string name="video_download_rate">Download rate: %dKB/s</string>
	<string name="action_search">Search</string>
	<string name="action_delete">Delete</string>
	<string name="action_camera">Camera</string>
	<string name="search_hint">Search video</string>
	<string name="search_result_title">Search result: %d</string>
	<string name="search_history">%d results</string>
	<string name="muti_select_all">Select All</string>
    <string name="menu_select_none">Unselect All</string>
    <string name="delete_confirm">Delete</string>
    <string name="no_file_del">No files deleted</string>
    <string name="delete_msg">Choose %d items</string>
    <string name="confirm_dialog_title">Delete?</string>
    <string name="no">Cancel</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_tv">TV</string>
    <string name="controller_prev_video">Play previous video</string>
    <string name="controller_next_video">Play next video</string>
    <string name="controller_rewind">Rewind</string>
    <string name="controller_fastforward">FastForward</string>
    <string name="controller_stop">Stop</string>
    <string name="controller_play_pause">Play or Pause</string>
    <string name="controller_favorite">Favorite</string>
</resources>
