<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="74dp"
    android:background="@color/mediacontroller_bg"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.0dip"
        android:orientation="horizontal">
        
        <TextView 
            android:id="@+id/controller_time_current"
            style="@style/MediaController_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5.0dip"/>
        
        <TextView 
            android:id="@+id/controller_time_total"
            style="@style/MediaController_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5.0dip"/>
        
        <SeekBar 
            android:id="@+id/controller_seekbar"
            style="@style/MediaController_SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/controller_time_total"
            android:layout_toRightOf="@id/controller_time_current"
            android:focusable="true"
            android:max="1000"/>
        
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        
        <ImageButton 
            android:id="@+id/controller_prev_video"
            android:contentDescription="@string/controller_prev_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/mediacontroller_button"
            android:src="@drawable/ic_vidcontrol_prev"/>
        
        <ImageButton 
            android:id="@+id/controller_rewind"
            android:contentDescription="@string/controller_rewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/mediacontroller_button"
            android:src="@drawable/ic_vidcontrol_rew"/>
        
        <ImageButton 
            android:id="@+id/controller_stop"
            android:contentDescription="@string/controller_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/mediacontroller_button"
            android:src="@drawable/ic_vidcontrol_stop"/>
        
        <ImageButton 
            android:id="@+id/controller_fastforward"
            android:contentDescription="@string/controller_fastforward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/mediacontroller_button"
            android:src="@drawable/ic_vidcontrol_ffwd"/>
        
        <ImageButton 
            android:id="@+id/controller_next_video"
            android:contentDescription="@string/controller_next_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/mediacontroller_button"
            android:src="@drawable/ic_vidcontrol_next"/>
        
    </LinearLayout>

</LinearLayout>
